# pulp

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  dist-workspace.toml
.claude/skills/fixtures/: SKILL.md
.github/: zizmor.yml
.github/screenshots/: capture.mjs  frame.html  package.json
.github/workflows/: ci-windows-installer.yml  ci.yml  cut-release.yml  pr-preview.yml  release-macos-app.yml  release-windows-app.yml  release.yml  screenshots.yml
.github/workflows/build-setup/: build-setup.yml
backend/: .env.example  Cargo.toml  build.rs  openapi.json
backend/migrations/: 0001_initial.sql
backend/src/: ai_filter.rs  config.rs  error.rs  lib.rs  main.rs  proc.rs  server.rs  state.rs  tls.rs  web.rs
backend/src/ai/: judge.rs  local.rs  mod.rs
backend/src/api/: admin.rs  channels.rs  config.rs  logs.rs  mentions.rs  mod.rs  monitors.rs  notifications.rs  push.rs  sse.rs  targets.rs  workspaces.rs
backend/src/cli/: app.rs  channels.rs  client.rs  config.rs  mentions.rs  mod.rs  monitors.rs  notifications.rs  query.rs  seed.rs  serve.rs  util.rs  workspaces.rs
backend/src/collectors/: github.rs  github_filter.rs  hackernews.rs  mod.rs  reddit.rs  rss_parse.rs  scheduler.rs
backend/src/db/: pool.rs
backend/src/db/repos/: channel.rs  collector_target.rs  mention.rs  mod.rs  monitor.rs  notification.rs  traits.rs  workspace.rs
backend/src/notifier/: mod.rs  webhook.rs  webpush.rs
backend/src/ratelimit/: adaptive.rs  mod.rs
backend/tests/: channel_backfill_test.rs  channel_cleanup_test.rs  sim_throttle.rs  test_ai_filter.rs  test_ai_local.rs  test_backfill.rs  test_channels.rs  test_cli.rs  test_collector_targets.rs  test_collectors.rs  test_cross_origin.rs  test_logs.rs  test_mention_dedup.rs  test_mentions.rs  test_monitors.rs  test_notifications.rs  test_notifier.rs  test_sse.rs  test_workspaces.rs
backend/tests/common/: mock_github.rs  mock_hn.rs  mock_push.rs  mock_reddit.rs  mock_sink.rs  mod.rs
backend/wix/: License.rtf  main.wxs
docs/: ARCHITECTURE.md  CONFIGURATION.md  THREAT_MODEL.md  WEBPUSH.md
docs/channels/: README.md  github.md  hackernews.md  reddit.md
frontend/: .npmrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.worker.json  vite.config.ts
frontend/scripts/: generate-icons.mjs
frontend/src/: App.tsx  index.css  main.tsx  sw.ts  theme.css  vite-env.d.ts
frontend/src/api/: channels.ts  client.ts  queries.ts  queryClient.ts  types.gen.ts  types.ts
frontend/src/components/: ChannelLogo.tsx  CollectionTargets.tsx  GrapefruitLogo.tsx  Layout.tsx  LogViewer.tsx  MentionCard.tsx  NotificationsSettings.tsx
frontend/src/components/ui/: add-button.tsx  badge.tsx  button.tsx  dialog.tsx  input.tsx  toast.tsx  toggle-switch.tsx  useToast.ts
frontend/src/demo/: client.ts  fixtures.ts  index.ts
frontend/src/lib/: markdown.tsx  push.ts  time.ts
frontend/src/pages/: ChannelDetailPage.tsx  ChannelsPage.tsx  FeedPage.tsx  MentionDetailPage.tsx  MonitorsPage.tsx  SettingsPage.tsx
frontend/src/stores/: workspace.ts
frontend/src/test/: setup-utils.tsx  setup.ts  utils.tsx
frontend/src/test/mocks/: api.ts
frontend/src/tests/components/: CollectionTargets.test.tsx  Layout.test.tsx  LogViewer.test.tsx  MentionCard.test.tsx  NotificationsSettings.test.tsx
frontend/src/tests/demo/: fixtures.test.ts
frontend/src/tests/lib/: markdown.test.tsx  time.test.ts  utils.test.ts
frontend/src/tests/pages/: ChannelsPage.operations.test.tsx  ChannelsPage.test.tsx  FeedPage.test.tsx  MentionDetailPage.test.tsx  MonitorsPage.demo.test.tsx  MonitorsPage.test.tsx
pr-1/: index.html  manifest.webmanifest  registerSW.js  sw.js
pr-1/assets/: index-C9QxyQI_.js  index-CK03WA6r.css
scripts/macos/: build-local.sh  make-app.sh  make-dmg.sh  make-icns.sh
